--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-loading-icons": "^1.1.0",
+    "sass": "^1.55.0",
+    "styled-components": "^5.3.6",
+    "swiper": "^8.4.4",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.25.0",
