--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_API_BASE_URL= "https://admin.tobenski.dk/api/bhk/v1/"
 NEXT_PUBLIC_API_NAVIGATION="https://admin.tobenski.dk/api/menus/v1/menus/"
 
-NEXT_PUBLIC_PROXY_URL="https://schmidtb.de/p/browse.php?u="
+NEXT_PUBLIC_PROXY_URL="https://api.det-gamle-posthus.dk/api/v1/proxy"
 
 
 NEXT_PUBLIC_CONVENTUS_FORENINGS_ID="7361"
