--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
+NEXT_PUBLIC_HOST="http://localhost:3000/"
 NEXT_PUBLIC_API_BASE_URL= "https://admin.tobenski.dk/api/bhk/v1/"
+NEXT_PUBLIC_API_BASE="https://admin.tobenski.dk/api/"
 NEXT_PUBLIC_API_NAVIGATION="https://admin.tobenski.dk/api/menus/v1/menus/"
-
-NEXT_PUBLIC_PROXY_URL="https://api.det-gamle-posthus.dk/api/v1/proxy"
-
 
 NEXT_PUBLIC_CONVENTUS_FORENINGS_ID="7361"
 
-
+WP_USER='apiUser'
+# WP_PASS='0yRD2dWYXXkG&hmPtbFYjGMO'
+WP_PASS='59UejY7BI10H4TIEtrxkOiLp'
