--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_HOST="http://localhost:3000/"
+NEXT_PUBLIC_HOST="http://localhost:3000"
 NEXT_PUBLIC_API_BASE_URL= "https://admin.tobenski.dk/api/bhk/v1/"
 NEXT_PUBLIC_API_BASE="https://admin.tobenski.dk/api/"
 NEXT_PUBLIC_API_NAVIGATION="https://admin.tobenski.dk/api/menus/v1/menus/"
