--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_HOST="http://localhost:3000"
-NEXT_PUBLIC_API_BASE="https://bhk.tobenski.dk/api/"
+#NEXT_PUBLIC_API_BASE="https://bhk.tobenski.dk/api/"
+NEXT_PUBLIC_API_BASE="http://localhost/wordpress/api/"
 NEXT_PUBLIC_CONVENTUS_FORENINGS_ID="7361"
 
